--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 .DS_Store
 .gitattributes
 .DS_Store
+.DS_Store
+__pycache__/utils.cpython-37.pyc
+__pycache__/statistics.cpython-37.pyc
+__pycache__/app.cpython-37.pyc
+.DS_Store
